- Fixed slideshow - Made social links open to new tab - Fixed scrollbar appearence behavious - Made post card num more visible

--- a/static/main/css/main.css
+++ b/static/main/css/main.css
@@ -10,19 +10,18 @@ body {
 
     min-height: calc(100vh - 70px); /*100vh - space for navbar*/
 
-    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/circles-light.png");
-    /* Background pattern from sublte patterns */
+    background: url("/static/main/img/circles-light.png");
+    /* Background pattern from sublte patterns (toptal.com)*/
     font-family: 'Roboto';
 
     overflow-x: hidden;
-    overflow-y: scroll;
 
     position: relative;
 }
 
 body.jeg {
-    background: url('https://www.toptal.com/designers/subtlepatterns/patterns/ignasi_pattern_s.png');
-    /* Background pattern from sublte patterns */
+    background: url("/static/main/img/ignasi_pattern_s.png");
+    /* Background pattern from sublte patterns (toptal.com)*/
 }
 
 body:after {
@@ -176,7 +175,7 @@ section, .card {
 footer {
     margin-top: 50px;
 
-    width: calc(100vw - 15px);
+    width: 100vw;
     height: 80px;
 
     clear: both;
