--- a/static/main/css/post_cards.css
+++ b/static/main/css/post_cards.css
@@ -85,22 +85,28 @@
 }
 
 .post.card .id {
+    padding: 3px 7px 3px 10px;
+
     position: absolute;
     top: 5px;
-    right: 7px;
+    right: 0px;
 
     z-index: 100;
-    
+
+    background-color: white;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+
     color: grey;
     font-size: 15px;
+
 }
 
 .post.card img {
-    margin: 5%;
+    margin: 0;
 
     display: block;
 
-    width: 90%;
+    width: 100%;
 }
 
 .post.card h2 {
