--- a/static/main/css/slides.css
+++ b/static/main/css/slides.css
@@ -55,14 +55,14 @@
 }
 
 .info#time-indicator {
-    width: 100%;
     height: 20px;
 
-    display: block;
+    display: inline-block;
 
-    position: absolute;
-    left: 0;
-    bottom: 0;
+    position: relative;
+    bottom: 20px;
+
+    transition: none;
 }
 
 #button-container {
